strona ciag dalszy

--- a/my_components/navbar.html
+++ b/my_components/navbar.html
@@ -12,7 +12,9 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <a class="navbar-brand" href="index.html">Przychodnia XYZ</a>
+    <a class="navbar-brand" href="../page_notlogged/index.html"
+      >Przychodnia XYZ</a
+    >
 
     <div
       class="collapse navbar-collapse ms-auto justify-content-xl"
@@ -86,4 +88,3 @@
     </div>
   </div>
 </nav>
-
