--- a/uiPatient/myaccountvisit.html
+++ b/uiPatient/myaccountvisit.html
@@ -19,7 +19,7 @@
     <main>
       <div
         class="container container-background"
-       style="padding-bottom: 10%;"
+       style="padding-bottom: 10%; height: 100vh; width: 100vw" 
       >
         <article>
           <div class="row">
