--- a/login.html
+++ b/login.html
@@ -11,8 +11,9 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <script src="./js/login-register.js"></script>
-    <script src="./js/login.js"></script>
+    <script src="./js/login-register.js" defer></script>
+    <script src="./js/login.js" defer></script>
+    <script src="./js/security/validation-login.js"  defer></script>
   </head>
   <body><!DOCTYPE html>
     <html lang="pl">
@@ -53,15 +54,15 @@
                       <div class="login-form">
                         <form action="process_login.php" method="post">
                           <div class="form-group">
-                            <label for="username">email/PESEL:</label>
-                            <input type="text" class="form-control" id="username" name="username" required>
+                            <label for="username">email:</label>
+                            <input type="text" class="form-control" id="username" name="username" required pattern="[A-Za-z0-9@.]{3,255}">
                           </div>
                           <div class="form-group">
                             <label for="password">Hasło:</label>
-                            <input type="password" class="form-control" id="password" name="password" required>
+                            <input type="password" class="form-control" id="password" name="password" required pattern="[A-Za-z0-9!@#$%&]{8,50}">
                           </div>
                           </br></br>
-                          <button type="button" class="btn btn-primary" onclick="logged()">Zaloguj</button>
+                          <button type="button" id="buttonLogin" class="btn btn-primary">Zaloguj</button>
                         </form>
                       </div>
                     </div>
