--- a/my_components/navbar_logged.html
+++ b/my_components/navbar_logged.html
@@ -12,7 +12,9 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <a class="navbar-brand" href="indexlogged.html">Przychodnia XYZ</a>
+    <a class="navbar-brand" href="../page_logged/indexlogged.html"
+      >Przychodnia XYZ</a
+    >
 
     <div
       class="collapse navbar-collapse ms-auto justify-content-xl"
@@ -21,7 +23,11 @@
     >
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link edit-przyciski" href="aboutuslogged.html">O nas</a>
+          <a
+            class="nav-link edit-przyciski"
+            href="../page_logged/aboutuslogged.html"
+            >O nas</a
+          >
         </li>
         <li class="nav-item dropdown">
           <a
@@ -55,17 +61,23 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link edit-przyciski" href="contactlogged.html"
+          <a
+            class="nav-link edit-przyciski"
+            href="../page_logged/contactlogged.html"
             >Kontakt</a
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link edit-przyciski" href="infologged.html"
+          <a
+            class="nav-link edit-przyciski"
+            href="../page_logged/infologged.html"
             >Informacje</a
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link edit-przyciski" href="myaccountdata.html"
+          <a
+            class="nav-link edit-przyciski"
+            href="../uiPatient/myaccountdata.html"
             >Moje Konto</a
           >
         </li>
