--- a/page_logged/aboutuslogged.html
+++ b/page_logged/aboutuslogged.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Przychodnia XYZ</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -11,8 +11,8 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./css/style.css" type="text/css" />
-    <script src="./js/login-register.js" defer></script>
+    <link rel="stylesheet" href="../css/style.css" type="text/css" />
+    <script src="../js/login-register.js" defer></script>
   </head>
   <body>
     <div id="navbarContainer"></div>
@@ -21,13 +21,28 @@
         class="container container-background"
         style="height: 100vh; width: 100vw"
       >
-        O NAS (ZALOGOWANY)
+        <article>
+          <div class="row">
+            <div class="col-sm-12 mt-3">
+              <!-- tu bedzie responsywnosc col -->
+              <section>
+                <header>
+                  <div class="containerNaglowekStrony">
+                    <h1 class="naglowekStrony">O nas:</h1>
+                  </div>
+                </header>
+              </section>
+            </div>
+          </div>
+          <section></section>
+        </article>
       </div>
     </main>
 
     <div id="footerContainer"></div>
+
     <script>
-      fetch("./my_components/navbar_logged.html")
+      fetch("../my_components/navbar_logged.html")
         .then((response) => response.text())
         .then((content) => {
           document.getElementById("navbarContainer").innerHTML = content;
@@ -35,17 +50,13 @@
     </script>
 
     <script>
-      fetch("./my_components/footer.html")
+      fetch("../my_components/footer.html")
         .then((response) => response.text())
         .then((content) => {
           document.getElementById("footerContainer").innerHTML = content;
         });
     </script>
-    <script>
-      function logOut() {
-        window.location.href = "aboutus.html";
-      }
-    </script>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
