--- a/register.html
+++ b/register.html
@@ -13,7 +13,8 @@
     />
     <link rel="stylesheet" href="./css/style.css" type="text/css" />
     <script src="./js/login-register.js" defer></script>
-    <script src="./js/register.js"></script>
+    <script src="./js/register.js" defer></script>
+    <script src="./js/security/validation-register.js"  defer></script>
   </head>
   <body>
     <div id="navbarContainer"></div>
@@ -37,16 +38,18 @@
                         <form action="process_login.php" method="post">
                           <div class="form-group">
                             <label for="username">email/PESEL:</label>
-                            <input type="text" class="form-control" id="usernameR" name="usernameR" required>
+                            <input type="text" class="form-control" id="usernameR" name="usernameR" required pattern="[A-Za-z0-9@.]{3,255}">
                           </div>
                           <div class="form-group">
                             <label for="password">Hasło:</label>
-                            <input type="password" class="form-control" id="passwordR" name="passwordR" required>
+                            <input type="password" class="form-control" id="passwordR" name="passwordR" required pattern="[A-Za-z0-9!@#$%&]{8,50}"  title="Hasło musi zawierać przynajmniej 8 znaków! Powinno się składać z liter, cyfr i znaku spcjalnego (! @ # $ % &)">
                           </div>
+                          <div id="passwordMessage1" style="color: red; display: none;">Słabe hasło!</div>
                           <div class="form-group">
                             <label for="password">Powtórz hasło:</label>
-                            <input type="password" class="form-control" id="passwordagainR" name="passwordagainR" required>
+                            <input type="password" class="form-control" id="passwordagainR" name="passwordagainR" required pattern="[A-Za-z0-9!@#$%&]{8,50}">
                           </div>
+                          <div id="passwordMessage2" style="color: red; display: none;">Powtórzone hasło jest błędne!</div>
                           <div class="form-group" style="float: left">
                             <input class="form-check-input" type="checkbox" value="" id="checkboxaccept">
                             <label class="form-check-label" for="flexCheckChecked">
@@ -54,7 +57,7 @@
                             </label>
                           </div>
                           </br></br>
-                          <button type="button" class="btn btn-primary" onclick="register()">Zarejestruj się!</button>
+                          <button type="button" id="buttonRegister" class="btn btn-primary">Zarejestruj się!</button>
                         </form>
                       </div>
                     </div>
@@ -72,13 +75,14 @@
     </main>
 
     <div id="footerContainer"></div>
+    
     <script>
       fetch("./my_components/navbar.html")
         .then((response) => response.text())
         .then((content) => {
           document.getElementById("navbarContainer").innerHTML = content;
         });
-    </script>
+    </script> 
 
     <script>
       fetch("./my_components/footer.html")
