--- a/uiPatient/myaccountregistration.html
+++ b/uiPatient/myaccountregistration.html
@@ -13,6 +13,7 @@
     />
     <link rel="stylesheet" href="../css/style.css" type="text/css" />
     <script src="../js/login-register.js" defer></script>
+    <script src="../js/registrationVisit-Patient.js" defer></script>
   </head>
   <body>
     <div id="navbarContainer"></div>
@@ -54,25 +55,25 @@
                   <div class="d-flex justify-content-center align-items-center full-height">
                     <div class="UI_data_container">
                       <div class="form-group row mb-3">
-                          <label for="formDataPESEL" class="col-sm-4 col-form-label text-right">Lekarz:</label>
+                          <label class="col-sm-4 col-form-label text-right">Lekarz:</label>
                           <div class="col-sm-8">
                               <input type="text" class="form-control" id="chooseDoctor" />
                           </div>
                       </div>
                       <div class="form-group row mb-3">
-                          <label for="formDataPESEL" class="col-sm-4 col-form-label text-right">Data:</label>
+                          <label class="col-sm-4 col-form-label text-right">Data:</label>
                           <div class="col-sm-8">
                               <input type="text" class="form-control" id="chooseDate" />
                           </div>
                       </div>
-                      <div class="form-group row mb-5">
-                          <label for="formDataPESEL">Krótki opis powodu wizyty:</label>
+                      <div class="form-group row mb-3">
+                          <label >Krótki opis powodu wizyty:</label>
                           <div>
-                            <input type="text" class="form-control" id="descriptionvisit" style="width: 100%; height: calc(3 * 38px);" />
+                            <textarea class="form-control" id="provideadescription" rows="4"></textarea>
                           </div>
                       </div>
                       <div style="float: right; white-space: nowrap">
-                        <button type="button" class="buttonRegisterVisit" id="registerVisit">
+                        <button type="button" class="buttonRegisterVisit" id="buttonRegistrationVisit">
                           Zarejestruj Wizytę
                         </button>
                       </div>
