strona ciag dalszy

--- a/my_components/navbar.html
+++ b/my_components/navbar.html
@@ -41,17 +41,19 @@
           </a>
           <ul class="dropdown-menu">
             <li>
-              <a class="dropdown-item" href="piotrdudek.html">dr Piotr Dudek</a>
+              <a class="dropdown-item" href="../page_notlogged/piotrdudek.html"
+                >dr Piotr Dudek</a
+              >
             </li>
             <li>
-              <a class="dropdown-item" href="drhouse.html">dr House</a>
+              <a class="dropdown-item" href="../page_notlogged/jakubnowak.html">dr Jakub Nowak</a>
             </li>
             <li>
-              <a class="dropdown-item" href="jakubnowak.html">dr Jakub Nowak</a>
+              <a class="dropdown-item" href="../page_notlogged/drhouse.html">dr House</a>
             </li>
             <li>
-              <a class="dropdown-item" href="sjankowalski.html"
-                >dr Jan Kowalski</a
+              <a class="dropdown-item" href="../page_notlogged/krystianhaduch.html"
+                >dr Krystian Haduch</a
               >
             </li>
           </ul>
