--- a/my_components/uireception.html
+++ b/my_components/uireception.html
@@ -3,13 +3,22 @@
     <!-- tu bedzie responsywnosc col -->
     <section>
       <ul class="nav nav-tabs">
-        <li class="nav-item registration">
-          <a class="nav-link" href="myaccountreceptionregistration.html"
-            >Formularz rejestracji</a
+        <li class="nav-item data">
+          <a class="nav-link" href="../uiWorker/myaccountreception.html"
+            >Moje Dane</a
           >
         </li>
-        <li class="nav-item myvisit">
-          <a class="nav-link" href="myaccountreceptionvisit.html">Wizyty</a>
+        <li class="nav-item visitsreported">
+          <a
+            class="nav-link"
+            href="../uiWorker/myaccountreceptionvisitsreport.html"
+            >Zgłoszone wizyty</a
+          >
+        </li>
+        <li class="nav-item visits">
+          <a class="nav-link" href="../uiWorker/myaccountreceptionvisit.html"
+            >Wizyty</a
+          >
         </li>
       </ul>
     </section>
