--- a/regulamin.html
+++ b/regulamin.html
@@ -18,43 +18,23 @@
     <div id="navbarContainer"></div>
     <main>
       <div
-        class="container container-background-lekarze"
+        class="container container-background"
         style="height: 100vh; width: 100vw"
       >
         <article>
-            <div class="row">
-                <div class="col-sm-12 mt-3">
-                  <!-- tu bedzie responsywnosc col -->
-                  <section>
-                    <header>
-                      <div class="containerNaglowekStrony">
-                        <h1 class="naglowekStrony">dr Piotr Dudek:</h1>
-                      </div>
-                    </header>
-                  </section>
-                </div>
-              </div>
-            <div class="row">
-                <div class="col-md-4 mt-3 zdjecie-doktora"> <!-- tu bedzie responsywnosc col -->
-                    <section>
-                         <img src="../images/drPiotrDudek.jpg" alt="dr Piotr Dudek" style="border: 4px solid #6CBCF4;">
-                    </section>
-                </div>
-                <div class="col-md-8 mt-3 opis-doktora"> <!-- tu bedzie responsywnosc col -->
-                    <section>
-                        <header>
-                                <blockquote>Specjalista na razie w niczym.  </br> </blockquote>
-                            Lubi kroić serca. Zdobywa doświadczenie jako praktykant w różnych szpitalach w Warszawie. </br>
-                            W 2025 roku może ukończy WUM. </br></br></br>
-                            
-                            Na razie to chyba tyle
-                        </header>
-                    </section>
-                </div>
+          <div class="row">
+            <div class="col-sm-12 mt-3">
+              <!-- tu bedzie responsywnosc col -->
+              <section>
+                <header>
+                  <div class="containerNaglowekStrony">
+                    <h1 class="naglowekStrony">O nas:</h1>
+                  </div>
+                </header>
+              </section>
             </div>
-            <section>
-                
-            </section>
+          </div>
+          <section></section>
         </article>
       </div>
     </main>
