--- a/uiWorker/myaccountreceptionvisitsreport.html
+++ b/uiWorker/myaccountreceptionvisitsreport.html
@@ -29,7 +29,9 @@
               <section>
                 <header>
                   <div class="containerNaglowekStrony">
-                    <h1 class="naglowekStrony">Zatwierdzone Wizyty:</h1>
+                    <h1 class="naglowekStrony">
+                      Zgłoszone Wizyty (KOnto recepcjonisty):
+                    </h1>
                   </div>
                 </header>
               </section>
@@ -43,7 +45,7 @@
                   style="margin-left: 40px; margin-right: 40px"
                 ></div>
                 <style>
-                  .visits {
+                  .visitsreported {
                     background-color: rgb(255, 255, 255);
                     border-top: 3px solid black;
                     border-right: 3px solid black;
@@ -59,14 +61,13 @@
                       <thead>
                         <tr>
                           <th scope="col">nr</th>
-                          <th scope="col">Data</th>
                           <th scope="col">Lekarz</th>
                           <th scope="col">Pacjent (imie, nazwisko)</th>
                           <th scope="col">Pacjent (pesel)</th>
                           <th scope="col">Akcja</th>
                         </tr>
                       </thead>
-                      <tbody id="tabela-wizyt">
+                      <tbody id="tabela-wizyt-zgloszonych">
                         <!-- Tutaj zostaną wstawione wiersze -->
                       </tbody>
                     </table>
