--- a/my_components/navbar_logged.html
+++ b/my_components/navbar_logged.html
@@ -41,21 +41,23 @@
           </a>
           <ul class="dropdown-menu">
             <li>
-              <a class="dropdown-item" href="piotrdudeklogged.html"
+              <a
+                class="dropdown-item"
+                href="../page_logged/piotrdudeklogged.html"
                 >dr Piotr Dudek</a
               >
             </li>
             <li>
-              <a class="dropdown-item" href="houselogged.html">dr House</a>
-            </li>
-            <li>
-              <a class="dropdown-item" href="jakubnowaklogged.html"
+              <a class="dropdown-item" href="../page_logged/jakubnowaklogged.html"
                 >dr Jakub Nowak</a
               >
             </li>
             <li>
-              <a class="dropdown-item" href="jankowalskilogged.html"
-                >dr Jan Kowalski</a
+              <a class="dropdown-item" href="../page_logged/drhouselogged.html">dr House</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="../page_logged/krystianhaduchlogged.html"
+                >dr Krystian Haduch</a
               >
             </li>
           </ul>
