--- a/uiWorker/myaccountreception.html
+++ b/uiWorker/myaccountreception.html
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" href="../css/style.css" type="text/css" />
     <script src="../js/login-register.js" defer></script>
-    <script src="../js/updatePatientData.js" defer></script>
+    <script src="../js/updatePatientData.js"></script>
   </head>
   <body>
     <div id="navbarContainer"></div>
@@ -29,7 +29,7 @@
               <section>
                 <header>
                   <div class="containerNaglowekStrony">
-                    <h1 class="naglowekStrony">Zatwierdzone Wizyty:</h1>
+                    <h1 class="naglowekStrony">Moje Konto:</h1>
                   </div>
                 </header>
               </section>
@@ -43,7 +43,7 @@
                   style="margin-left: 40px; margin-right: 40px"
                 ></div>
                 <style>
-                  .visits {
+                  .data {
                     background-color: rgb(255, 255, 255);
                     border-top: 3px solid black;
                     border-right: 3px solid black;
@@ -53,25 +53,7 @@
                 </style>
               </section>
               <section>
-                <div class="container_UI_Patient">
-                  <div>
-                    <table class="table">
-                      <thead>
-                        <tr>
-                          <th scope="col">nr</th>
-                          <th scope="col">Data</th>
-                          <th scope="col">Lekarz</th>
-                          <th scope="col">Pacjent (imie, nazwisko)</th>
-                          <th scope="col">Pacjent (pesel)</th>
-                          <th scope="col">Akcja</th>
-                        </tr>
-                      </thead>
-                      <tbody id="tabela-wizyt">
-                        <!-- Tutaj zostaną wstawione wiersze -->
-                      </tbody>
-                    </table>
-                  </div>
-                </div>
+                <div class="container_UI_Patient">panel glowny recepcji</div>
               </section>
             </div>
           </div>
@@ -110,7 +92,7 @@
         window.location.href = "../page_notlogged/index.html";
       }
     </script>
-    <script src="../js/uivisitsreported.js" defer></script>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
