--- a/uiWorker/myaccountreceptionvisit.html
+++ b/uiWorker/myaccountreceptionvisit.html
@@ -63,7 +63,8 @@
                           <th scope="col">Lekarz</th>
                           <th scope="col">Pacjent (imie, nazwisko)</th>
                           <th scope="col">Pacjent (pesel)</th>
-                          <th scope="col">Akcja</th>
+                          <th scope="col">Status</th>
+                          <th scope="col">Usuń wizyte</th>
                         </tr>
                       </thead>
                       <tbody id="tabela-wizyt">
@@ -110,7 +111,7 @@
         window.location.href = "../page_notlogged/index.html";
       }
     </script>
-    <script src="../js/uivisitsreported.js" defer></script>
+    <script src="../js/uivisitsaccepted.js" defer></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
