--- a/uiPatient/myaccountregistration.html
+++ b/uiPatient/myaccountregistration.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../css/style.css" type="text/css" />
     <script src="../js/login-register.js" defer></script>
     <script src="../js/registrationVisit-Patient.js" defer></script>
+    <script src="../js/show-list-doctors.js" defer></script>
   </head>
   <body>
     <div id="navbarContainer"></div>
@@ -52,12 +53,19 @@
               <section>
                 <div class="container_UI_Patient">
                   <div class="subtitle">Zapisz się na wizytę:</div>
+                  <div id="notification" class="notification">
+                    Zgłoszenie rejestracji wizyty zrobione pomyślnie!
+                </div>                
                   <div class="d-flex justify-content-center align-items-center full-height">
                     <div class="UI_data_container">
                       <div class="form-group row mb-3">
                           <label class="col-sm-4 col-form-label text-right">Lekarz:</label>
                           <div class="col-sm-8">
-                              <input type="text" class="form-control" id="chooseDoctor" />
+                            <div class="input-group mb-3">
+                              <select class="form-select" id="chooseDoctor">
+                                <option id = "list-doctors-form"></option>
+                              </select>
+                            </div>
                           </div>
                       </div>
                       <div class="form-group row mb-3">
