--- a/uiDoctor/editvisit.html
+++ b/uiDoctor/editvisit.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Przychodnia XYZ</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -12,67 +12,162 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../css/style.css" type="text/css" />
-    <script src="../js/login-register.js" defer></script>
+    <script src="../js/show-date-about-visit.js" defer></script>
   </head>
   <body>
-    <div id="navbarContainer"></div>
     <main>
       <div
         class="container container-background"
-        style="height: 100vh; width: 100vw"
+       style="padding-bottom: 10%; height: 100vh"
       >
         <article>
-          <section>
-            <header>
-              <div class="containerNaglowekStrony">
-                <h2 class="naglowekStrony">Wizyta:</h2>
-              </div>
-            </header>
-          </section>
-          <section></section>
-          <style>
-            .data {
-              background-color: rgb(255, 255, 255);
-            }
-          </style>
+          <div class="row">
+            <div class="col-sm-12 mt-3">
+              <!-- tu bedzie responsywnosc col -->
+              <section>
+                <header>
+                  <div class="containerNaglowekStrony">
+                    <h1 class="naglowekStrony">Wizyta rozpoczęta!</h1>
+                  </div>
+                </header>
+              </section>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-12 mt-3"></div>
+              <section>
+                <style>
+                  .data {
+                    background-color: rgb(255, 255, 255);
+                    border-top: 3px solid black;
+                    border-right: 3px solid black;
+                    border-bottom: none; /* Brak obramowania na dolnej krawędzi */
+                    border-left: 3px solid black;
+                  }
+                </style>
+              </section>
+              <section>
+                <div class="container_UI_Patient">
+                  <div class="d-flex justify-content-center align-items-center full-height">
+                    <div class="UI_data_container">
+                      <div class="form-group row mb-3">
+                        <label
+                          for="formDataFirstName"
+                          class="col-sm-4 col-form-label text-right"
+                          >Imie:
+                        </label>
+                        <div class="col-sm-8">
+                          <label
+                          for="formDataFirstName"
+                          class="col-sm-4 col-form-label text-right"
+                          id="setImiePacjenta"
+                          >
+                        </label>
+                        </div>
+                      </div>
+                      <div class="form-group row mb-3">
+                        <label
+                          for="formDataFirstName"
+                          class="col-sm-4 col-form-label text-right"
+                          >Nazwisko:
+                        </label>
+                        <div class="col-sm-8">
+                          <label
+                          for="formDataFirstName"
+                          class="col-sm-4 col-form-label text-right"
+                          id="setNazwiskoPacjenta"
+                          >
+                        </label>
+                        </div>
+                      </div>
+                      <div class="form-group row mb-3">
+                        <label
+                          for="formDataFirstName"
+                          class="col-sm-4 col-form-label text-right"
+                          >PESEL:
+                        </label>
+                        <div class="col-sm-8">
+                          <label
+                          for="formDataFirstName"
+                          class="col-sm-4 col-form-label text-right"
+                          id="setPeselPacjenta"
+                          >
+                        </label>
+                        </div>
+                      </div>
+                      <div class="form-group row mb-3">
+                        <label
+                          for="formDataFirstName"
+                          class="col-sm-4 col-form-label text-right"
+                          >Wiek:
+                        </label>
+                        <div class="col-sm-8">
+                          <label
+                          for="formDataFirstName"
+                          class="col-sm-4 col-form-label text-right"
+                          id="setPeselPacjenta"
+                          >
+                        </label>
+                        </div>
+                      </div>
+                      <div class="form-group row mb-3">
+                        <label
+                          for="formDataFirstName"
+                          class="col-sm-4 col-form-label text-right"
+                          >Płeć:
+                        </label>
+                        <div class="col-sm-8">
+                          <label
+                          for="formDataFirstName"
+                          class="col-sm-4 col-form-label text-right"
+                          id="setPłecPacjenta"
+                          >
+                        </label>
+                        </div>
+                      </div>
+                      <div class="form-group row mb-3">
+                        <label
+                          for="formDataFirstName"
+                          class="col-sm-4 col-form-label text-right"
+                          >Powód wizyty:
+                        </label>
+                        <div class="col-sm-8">
+                          <label
+                          for="formDataFirstName"
+                          class="col-sm-4 col-form-label text-right"
+                          id="setPeselPacjenta"
+                          >
+                        </label>
+                        </div>
+                      </div>
+                      <div class="form-group row mb-3">
+                        <label
+                          for="formDataFirstName"
+                          class="col-sm-4 col-form-label text-right"
+                          >Rozpoznanie:
+                        </label>
+                      </div>
+                      <div class="form-group row mb-3">
+                        <div>
+                          <textarea class="form-control" id="rozpoznanieLekarza" rows="6"></textarea>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div>
+                    <button type="button" class="buttonSaveData" id="acceptVisit" onclick="setdatevisit()">
+                      Zakończ wizyte
+                    </button>
+                  </div>
+                </div>
+              </section>
+            </div>
+          </div>
           <section></section>
         </article>
       </div>
     </main>
-
-    <div id="footerContainer"></div>
-    <script>
-      function startVisit() {
-        window.open("editvisit.html", "_blank");
-      }
-    </script>
-    <script>
-      fetch("../my_components/navbar_logged.html")
-        .then((response) => response.text())
-        .then((content) => {
-          document.getElementById("navbarContainer").innerHTML = content;
-        });
-    </script>
-    <script>
-      fetch("../my_components/uipatient.html")
-        .then((response) => response.text())
-        .then((content) => {
-          document.getElementById("navbarUI").innerHTML = content;
-        });
-    </script>
-
-    <script>
-      fetch("../my_components/footer.html")
-        .then((response) => response.text())
-        .then((content) => {
-          document.getElementById("footerContainer").innerHTML = content;
-        });
-    </script>
-    <script>
-      function logOut() {
-        window.location.href = "index.html";
-      }
-    </script>
+   
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
