--- a/uiDoctor/editvisit.html
+++ b/uiDoctor/editvisit.html
@@ -57,12 +57,12 @@
                           >Imie:
                         </label>
                         <div class="col-sm-8">
-                          <label
+                          <input
                           for="formDataFirstName"
                           class="col-sm-4 col-form-label text-right"
                           id="setImiePacjenta"
                           >
-                        </label>
+                        </input>
                         </div>
                       </div>
                       <div class="form-group row mb-3">
