--- a/uiDoctor/editvisit.html
+++ b/uiDoctor/editvisit.html
@@ -28,6 +28,7 @@
                 <header>
                   <div class="containerNaglowekStrony">
                     <h1 class="naglowekStrony">Wizyta rozpoczęta!</h1>
+                    <h2 id="visitid"></h2>
                   </div>
                 </header>
               </section>
@@ -60,7 +61,7 @@
                           <label
                           for="formDataFirstName"
                           class="col-sm-4 col-form-label text-right"
-                          id="setImiePacjenta"
+                          id="name"
                           >
                         </label>
                         </div>
@@ -75,7 +76,7 @@
                           <label
                           for="formDataFirstName"
                           class="col-sm-4 col-form-label text-right"
-                          id="setNazwiskoPacjenta"
+                          id="last_name"
                           >
                         </label>
                         </div>
@@ -90,7 +91,7 @@
                           <label
                           for="formDataFirstName"
                           class="col-sm-4 col-form-label text-right"
-                          id="setPeselPacjenta"
+                          id="pesel"
                           >
                         </label>
                         </div>
@@ -105,7 +106,7 @@
                           <label
                           for="formDataFirstName"
                           class="col-sm-4 col-form-label text-right"
-                          id="setPeselPacjenta"
+                          id="age"
                           >
                         </label>
                         </div>
@@ -120,7 +121,7 @@
                           <label
                           for="formDataFirstName"
                           class="col-sm-4 col-form-label text-right"
-                          id="setPłecPacjenta"
+                          id="sex"
                           >
                         </label>
                         </div>
@@ -135,7 +136,7 @@
                           <label
                           for="formDataFirstName"
                           class="col-sm-4 col-form-label text-right"
-                          id="setPeselPacjenta"
+                          id="reason"
                           >
                         </label>
                         </div>
@@ -144,6 +145,7 @@
                         <label
                           for="formDataFirstName"
                           class="col-sm-4 col-form-label text-right"
+                          id="note"
                           >Rozpoznanie:
                         </label>
                       </div>
