--- a/uiDoctor/editvisit.html
+++ b/uiDoctor/editvisit.html
@@ -157,7 +157,7 @@
                     </div>
                   </div>
                   <div>
-                    <button type="button" class="buttonSaveData" id="acceptVisit" onclick="setdatevisit()">
+                    <button type="button" class="buttonSaveData" id="acceptVisit" onclick="finishVisit()">
                       Zakończ wizyte
                     </button>
                   </div>
