dokonczenie edycji szablonu strony

--- a/my_components/navbar_logged_doctor.html
+++ b/my_components/navbar_logged_doctor.html
@@ -12,7 +12,11 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <a class="navbar-brand" href="indexlogged.html">Przychodnia XYZ</a>
+    <a
+      class="navbar-brand"
+      href="indexlogged.html"
+      >Przychodnia XYZ</a
+    >
 
     <div
       class="collapse navbar-collapse ms-auto justify-content-xl"
