--- a/page_logged/krystianhaduchlogged.html
+++ b/page_logged/krystianhaduchlogged.html
@@ -28,7 +28,7 @@
                   <section>
                     <header>
                       <div class="containerNaglowekStrony">
-                        <h1 class="naglowekStrony">dr Piotr Dudek:</h1>
+                        <h1 class="naglowekStrony">Krystian Haduch:</h1>
                       </div>
                     </header>
                   </section>
@@ -37,17 +37,17 @@
             <div class="row">
                 <div class="col-md-4 mt-3 zdjecie-doktora"> <!-- tu bedzie responsywnosc col -->
                     <section>
-                         <img src="../images/drPiotrDudek.jpg" alt="dr Piotr Dudek" style="border: 4px solid #6CBCF4;">
+                         <img src="../images/drKrystianHaduch.jpg" alt="dr Piotr Dudek" style="border: 4px solid #6CBCF4;">
                     </section>
                 </div>
                 <div class="col-md-8 mt-3 opis-doktora"> <!-- tu bedzie responsywnosc col -->
                     <section>
                         <header>
-                                <blockquote>Specjalista na razie w niczym.  </br> </blockquote>
-                            Lubi kroić serca. Zdobywa doświadczenie jako praktykant w różnych szpitalach w Warszawie. </br>
-                            W 2025 roku może ukończy WUM. </br></br></br>
+                                <blockquote>W zasadzie to nawet nie jest lekarz  </br> </blockquote>
+                            Po prostu sprząta w naszej przychodni. </br>
+                             Może posprzątać i u ciebie</br></br></br>
                             
-                            Na razie to chyba tyle
+                            Zapraszamy do skorzystania z usługi!
                         </header>
                     </section>
                 </div>
@@ -76,7 +76,11 @@
           document.getElementById("footerContainer").innerHTML = content;
         });
     </script>
-
+  <script>
+    function logOut() {
+      window.location.href = "../page_notlogged/krystianhaduch.html";
+    }
+  </script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
