--- a/page_notlogged/jakubnowak.html
+++ b/page_notlogged/jakubnowak.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Przychodnia XYZ</title>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&family=Tilt+Neon&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -28,7 +37,7 @@
                   <section>
                     <header>
                       <div class="containerNaglowekStrony">
-                        <h1 class="naglowekStrony">dr Piotr Dudek:</h1>
+                        <h1 class="naglowekStrony">dr Jakub Nowak:</h1>
                       </div>
                     </header>
                   </section>
@@ -37,17 +46,17 @@
             <div class="row">
                 <div class="col-md-4 mt-3 zdjecie-doktora"> <!-- tu bedzie responsywnosc col -->
                     <section>
-                         <img src="../images/drPiotrDudek.jpg" alt="dr Piotr Dudek" style="border: 4px solid #6CBCF4;">
+                         <img src="../images/drJakubNowak.jpg" alt="dr Piotr Dudek" style="border: 4px solid #6CBCF4;">
                     </section>
                 </div>
                 <div class="col-md-8 mt-3 opis-doktora"> <!-- tu bedzie responsywnosc col -->
                     <section>
                         <header>
-                                <blockquote>Specjalista na razie w niczym.  </br> </blockquote>
-                            Lubi kroić serca. Zdobywa doświadczenie jako praktykant w różnych szpitalach w Warszawie. </br>
-                            W 2025 roku może ukończy WUM. </br></br></br>
+                                <blockquote>Lekarz rodzinny.  </br> </blockquote>
+                            Zupełnie normalny i popularny w okolicy lekarz o zupełnie normalnym i popularnym imieniu i nazwisku w Polsce. </br>
+                            Ma swój gabinet w piwnicy przychodni. </br></br></br>
                             
-                            Na razie to chyba tyle
+                            Zapraszamy na wizyty!
                         </header>
                     </section>
                 </div>
