--- a/page_logged/aboutuslogged.html
+++ b/page_logged/aboutuslogged.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Przychodnia XYZ</title>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&family=Tilt+Neon&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -34,6 +43,27 @@
               </section>
             </div>
           </div>
+          <div class="row">
+            <div class="col-sm-12 mt-3" style="font-weight: bold;">
+              <section>
+                Jesteśmy zespołem doświadczonych lekarzy i personelu medycznego, którzy z pasją i zaangażowaniem poświęcają się zdrowiu i dobrostanowi naszych pacjentów. Nasza przychodnia to miejsce, gdzie dbamy nie tylko o leczenie chorób, ale także o profilaktykę oraz edukację zdrowotną, aby wspierać Was w osiąganiu i utrzymywaniu pełni zdrowia.
+                </br></br>
+                Od momentu naszego powstania stawiamy na wysoką jakość świadczonych usług oraz przyjazną atmosferę, która sprawia, że każda wizyta u nas to połączenie profesjonalizmu z serdecznym podejściem. Dzięki temu chcemy, abyście czuli się komfortowo i pewnie, korzystając z naszych usług medycznych.
+                </br></br>
+                Nasz zespół składa się z lekarzy różnych specjalizacji oraz wykwalifikowanego personelu pielęgniarskiego i administracyjnego, który jest gotowy służyć Wam fachową pomocą na każdym etapie Waszej drogi do zdrowia. Stawiamy na indywidualne podejście do każdego pacjenta, dostosowując nasze działania do Waszych potrzeb i oczekiwań.
+                </br></br>
+                W [Nazwa Przychodni] oferujemy szeroki zakres usług medycznych, w tym konsultacje lekarskie, badania diagnostyczne, zabiegi profilaktyczne oraz leczenie chorób. Nasz sprzęt diagnostyczny jest nowoczesny i wysokiej klasy, co pozwala nam szybko i skutecznie diagnozować różnorodne schorzenia oraz planować optymalne strategie leczenia.
+                </br></br>
+                Naszym celem jest być dla Was nie tylko miejscem, gdzie szukacie pomocy w przypadku dolegliwości, ale także partnerem na drodze do zdrowia i pełni życia. Dlatego też zachęcamy do regularnych wizyt profilaktycznych oraz do rozmów z naszym zespołem na temat Waszego zdrowia i dobrego samopoczucia.
+                </br></br>
+                Dziękujemy, że jesteście z nami i zaufaliście nam opiekę nad Waszym zdrowiem. Jesteśmy tu, aby Was wspierać i służyć pomocą w każdej sytuacji.
+                </br></br>
+                Serdecznie zapraszamy do odwiedzenia naszej przychodni!
+                </br>
+                Zespół Przychodnia XYZ
+              </section>
+            </div>
+          </div>
           <section></section>
         </article>
       </div>
@@ -56,7 +86,11 @@
           document.getElementById("footerContainer").innerHTML = content;
         });
     </script>
-
+    <script>
+      function logOut() {
+        window.location.href = "../page_notlogged/aboutus.html";
+      }
+    </script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
