--- a/page_logged/contactlogged.html
+++ b/page_logged/contactlogged.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Przychodnia XYZ</title>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&family=Tilt+Neon&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -19,7 +28,7 @@
     <main>
       <div
         class="container container-background"
-        style="height: 100vh; width: 100vw"
+        style="padding-left: 10%; padding-right: 10%; padding-bottom: 5%; text-align: center;"
       >
         <article>
           <div class="row">
@@ -34,7 +43,28 @@
               </section>
             </div>
           </div>
-          <section></section>
+          <div class="row">
+            <div class="col-sm-12 mt-3 section_window_edit">
+              <section>
+                <h2>Poniżej znajdziesz wszystkie niezbędne informacje kontaktowe:</br></br></h2>
+  
+                <strong>Dane kontaktowe:</br></strong>
+                Adres: [Adres Przychodni]</br>
+                Telefon: [Numer telefonu]</br>
+                E-mail: [Adres e-mail]</br></br>
+                <strong>Godziny otwarcia:</br></strong>
+                Poniedziałek - Piątek: [Godziny otwarcia]</br>
+                Sobota: [Godziny otwarcia]</br>
+                Niedziela: [Godziny otwarcia]</br></br>
+                <strong>Skontaktuj się z nami w razie pytań:</br></strong>
+                Jeśli chcesz umówić się na wizytę lub masz pytania dotyczące naszych usług, zapraszamy do kontaktu telefonicznego lub mailowego. Nasz personel z przyjemnością pomoże Ci wybrać dogodny termin i odpowiedzieć na wszelkie pytania.</br></br>
+                <div class="jakdonastrafic-edit">
+                <strong style="font-size: 15px;">Jak do nas trafić:</br></strong>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2579.557094053951!2d21.707432676213045!3d49.71913947146181!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473c4ebf2e1cfa33%3A0x10ec8820a86c1f63!2sWyspia%C5%84skiego%2020%2C%2038-400%20Krosno!5e0!3m2!1spl!2spl!4v1712960806935!5m2!1spl!2spl" width="500" height="350" style="border: 4px solid #6CBCF4;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+              </section>
+            </div>
+          </div>
         </article>
       </div>
     </main>
@@ -56,7 +86,11 @@
           document.getElementById("footerContainer").innerHTML = content;
         });
     </script>
-
+    <script>
+      function logOut() {
+        window.location.href = "../page_notlogged/contact.html";
+      }
+    </script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
