--- a/page_notlogged/info.html
+++ b/page_notlogged/info.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Przychodnia XYZ</title>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&family=Tilt+Neon&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -19,7 +28,7 @@
     <main>
       <div
         class="container container-background"
-        style="height: 100vh; width: 100vw"
+        style="padding-left: 15%; padding-right: 15%; padding-bottom: 5%; "
       >
         <article>
           <div class="row">
@@ -31,6 +40,41 @@
                     <h1 class="naglowekStrony">Informacje:</h1>
                   </div>
                 </header>
+              </section>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-12 mt-3">
+              <section>
+                <div style="text-align: center; font-size: 20px;">
+                <strong>Rejestracja Wizyt:</strong></br></br></br></div>
+                Aby umówić się na wizytę, mogą Państwo
+                skorzystać z jednej z dwóch dostępnych metod:</br> </br>
+                - Rejestracja Online: </br>
+                Prosimy odwiedzić naszą stronę internetową i po zarejestrowaniu konta, zalogowaniu i podaniu swoich danych, kliknąć w panelu pacjenta
+                zakładkę "Formularz Rejestracji" i tam wybierając odpowiedniego specjalistę oraz podając krótki opis zgłosić wizytę.</br> Nasi pracownicy zatwierdzą wizytę w ciągu 24h i podadzą najbliższy wolny termin. Zgłoszone wizyty jak i te zatwierdzone będą widoczne w kolejnej zakładce "Wizyty"</br></br>
+                - Rejestracja Telefoniczna:</br>
+                Prosimy zadzwonić pod numer naszej rejestracji: [numer
+                telefonu]. Nasz personel z przyjemnością pomoże Państwu wybrać
+                dogodny termin oraz odpowiedniego lekarza. Telefoniczna
+                rejestracja jest możliwa od poniedziałku do piątku w godzinach
+                [godziny pracy].</br></br></br></br>
+
+                <div style="text-align: center; font-size: 20px;">
+                  <strong>Regulamin przychodni:</strong></br></br></br></div>
+
+                Szanowni Pacjenci,</br>
+
+                W trosce o jakość naszych usług oraz bezpieczeństwo i komfort wszystkich pacjentów, prosimy o zapoznanie się z regulaminem naszej przychodni. Znajdują się w nim szczegółowe informacje dotyczące zasad rejestracji, odwoływania wizyt, obowiązków pacjentów oraz przepisów dotyczących ochrony danych osobowych.</br></br>
+
+                Główne zasady regulaminu obejmują:</br></br>
+
+                - Procedury rejestracji wizyt.</br></br>
+                - Zasady odwoływania wizyt.</br></br>
+                - Prawa i obowiązki pacjentów.</br></br>
+                - Ochronę danych osobowych.</br></br>
+                - Zasady przebywania na terenie przychodni.</br></br>
+                <strong>Pełna wersja regulaminu jest dostępna <a href="../regulamin.html" target="_blank">tutaj*</a></br></strong>
               </section>
             </div>
           </div>
