--- a/regulamin.html
+++ b/regulamin.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Przychodnia XYZ</title>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&family=Tilt+Neon&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -19,7 +28,12 @@
     <main>
       <div
         class="container container-background"
-        style="height: 100vh; width: 100vw"
+        style="
+          width: 100vw;
+          padding-left: 18%;
+          padding-right: 18%;
+          padding-bottom: 10%;
+        "
       >
         <article>
           <div class="row">
@@ -28,10 +42,54 @@
               <section>
                 <header>
                   <div class="containerNaglowekStrony">
-                    <h1 class="naglowekStrony">O nas:</h1>
+                    <h1>Regulamin Przychodni</h1>
                   </div>
                 </header>
               </section>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-12 mt-3">
+              <p>
+              </br></br>
+                1. Rejestracja pacjentów odbywa się telefonicznie pod numerem
+                <a href="tel:+48123456789">+48 123 456 789</a> przez stronę interntową lub osobiście w
+                godzinach pracy rejestracji.
+              </p>
+              <p></br>
+                2. Prosimy o punktualne przybycie na umówione wizyty. W
+                przypadku spóźnienia powyżej 30 minut, wizyta może zostać
+                odwołana.
+              </p>
+              <p></br>
+                3. Odwołanie wizyty jest możliwe najpóźniej na 24 godziny przed
+                planowanym terminem telefoniczne. W przeciwnym razie może zostać naliczona
+                opłata za nieodbytą wizytę.
+              </p>
+              <p></br>
+                4. Pacjenci są zobowiązani do przestrzegania zasad higieny oraz
+                stosowania się do zaleceń personelu medycznego.
+              </p>
+              <p></br>
+                5. W przypadku pytań lub wątpliwości prosimy o kontakt z
+                rejestracją pod adresem e-mail:
+                <a href="mailto:kontakt@przychodnia.pl"
+                  >kontakt@przychodnia.pl</a
+                >.
+              </p>
+              <p></br>
+                6. W sytuacjach nagłych i wymagających natychmiastowej pomocy
+                medycznej prosimy o kontakt z numerem alarmowym
+                <strong>112</strong>.
+              </p>
+              <p></br>
+                7. Przychodnia zastrzega sobie prawo do wprowadzania zmian w
+                regulaminie. Aktualna wersja regulaminu jest dostępna na stronie
+                internetowej przychodni.
+              </p>
+              <p class="contact">
+                Dziękujemy za przestrzeganie regulaminu i życzymy zdrowia!
+              </p>
             </div>
           </div>
           <section></section>
