--- a/uiDoctor/editvisit.html
+++ b/uiDoctor/editvisit.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Przychodnia XYZ</title>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&family=Tilt+Neon&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -12,13 +21,13 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../css/style.css" type="text/css" />
-    <script src="../js/show-date-about-visit.js" defer></script>
+    <script src="../js/show-data-about-visit.js" defer></script>
   </head>
   <body>
     <main>
       <div
         class="container container-background"
-       style="padding-bottom: 10%; height: 100vh"
+       style="padding-bottom: 10%;"
       >
         <article>
           <div class="row">
@@ -28,7 +37,7 @@
                 <header>
                   <div class="containerNaglowekStrony">
                     <h1 class="naglowekStrony">Wizyta rozpoczęta!</h1>
-                    <h2 id="visitid"></h2>
+                    <h2 style="display: none;"id="visitid"></h2>
                   </div>
                 </header>
               </section>
@@ -49,15 +58,16 @@
               </section>
               <section>
                 <div class="container_UI_Patient">
-                  <div class="d-flex justify-content-center align-items-center full-height">
-                    <div class="UI_data_container">
-                      <div class="form-group row mb-3">
+                  <div class="d-flex justify-content-center align-items-center full-height full-width" >
+                    <div class="UI_data_container align-items-center" style="width: 50%; padding:30px;">
+                      <div class="form-group row mb-3" style="border: 3px solid rgb(52, 68, 152); border-radius: 10px;">
                         <label
                           for="formDataFirstName"
-                          class="col-sm-4 col-form-label text-right"
+                          class="col-sm-4 col-form-label text-right" 
+                          style="background-color: rgb(139, 206, 250); border-bottom-left-radius: 8px; border-top-left-radius: 8px"
                           >Imie:
                         </label>
-                        <div class="col-sm-8">
+                        <div class="col-sm-8" style="text-align: center; font-weight: bold; background-color: rgb(228, 252, 255);  border-bottom-right-radius: 8px; border-top-right-radius: 8px">
                           <label
                           for="formDataFirstName"
                           class="col-sm-4 col-form-label text-right"
@@ -66,13 +76,14 @@
                         </label>
                         </div>
                       </div>
-                      <div class="form-group row mb-3">
+                      <div class="form-group row mb-3" style="border: 3px solid rgb(52, 68, 152); border-radius: 10px;">
                         <label
                           for="formDataFirstName"
-                          class="col-sm-4 col-form-label text-right"
+                          class="col-sm-4 col-form-label text-right" 
+                          style="background-color: rgb(139, 206, 250); border-bottom-left-radius: 8px; border-top-left-radius: 8px"
                           >Nazwisko:
                         </label>
-                        <div class="col-sm-8">
+                        <div class="col-sm-8" style="text-align: center; font-weight: bold; background-color: rgb(228, 252, 255);  border-bottom-right-radius: 8px; border-top-right-radius: 8px">
                           <label
                           for="formDataFirstName"
                           class="col-sm-4 col-form-label text-right"
@@ -81,13 +92,14 @@
                         </label>
                         </div>
                       </div>
-                      <div class="form-group row mb-3">
+                      <div class="form-group row mb-3" style="border: 3px solid rgb(52, 68, 152); border-radius: 10px;">
                         <label
                           for="formDataFirstName"
                           class="col-sm-4 col-form-label text-right"
+                          style="background-color: rgb(139, 206, 250); border-bottom-left-radius: 8px; border-top-left-radius: 8px"
                           >PESEL:
                         </label>
-                        <div class="col-sm-8">
+                        <div class="col-sm-8" style="text-align: center; font-weight: bold; background-color: rgb(228, 252, 255);  border-bottom-right-radius: 8px; border-top-right-radius: 8px">
                           <label
                           for="formDataFirstName"
                           class="col-sm-4 col-form-label text-right"
@@ -96,13 +108,14 @@
                         </label>
                         </div>
                       </div>
-                      <div class="form-group row mb-3">
+                      <div class="form-group row mb-3" style="border: 3px solid rgb(52, 68, 152); border-radius: 10px;">
                         <label
                           for="formDataFirstName"
                           class="col-sm-4 col-form-label text-right"
+                          style="background-color: rgb(139, 206, 250); border-bottom-left-radius: 8px; border-top-left-radius: 8px"
                           >Wiek:
                         </label>
-                        <div class="col-sm-8">
+                        <div class="col-sm-8" style="text-align: center; font-weight: bold; background-color: rgb(228, 252, 255);  border-bottom-right-radius: 8px; border-top-right-radius: 8px">
                           <label
                           for="formDataFirstName"
                           class="col-sm-4 col-form-label text-right"
@@ -111,13 +124,14 @@
                         </label>
                         </div>
                       </div>
-                      <div class="form-group row mb-3">
+                      <div class="form-group row mb-3" style="border: 3px solid rgb(52, 68, 152); border-radius: 10px;">
                         <label
                           for="formDataFirstName"
                           class="col-sm-4 col-form-label text-right"
+                          style="background-color: rgb(139, 206, 250); border-bottom-left-radius: 8px; border-top-left-radius: 8px"
                           >Płeć:
                         </label>
-                        <div class="col-sm-8">
+                        <div class="col-sm-8" style="text-align: center; font-weight: bold; background-color: rgb(228, 252, 255);  border-bottom-right-radius: 8px; border-top-right-radius: 8px">
                           <label
                           for="formDataFirstName"
                           class="col-sm-4 col-form-label text-right"
@@ -126,13 +140,14 @@
                         </label>
                         </div>
                       </div>
-                      <div class="form-group row mb-3">
+                      <div class="form-group row mb-3" style="border: 3px solid rgb(52, 68, 152); border-radius: 10px;">
                         <label
                           for="formDataFirstName"
                           class="col-sm-4 col-form-label text-right"
+                          style="background-color: rgb(139, 206, 250); border-bottom-left-radius: 8px; border-top-left-radius: 8px"
                           >Powód wizyty:
                         </label>
-                        <div class="col-sm-8">
+                        <div class="col-sm-8" style="text-align: center; font-weight: bold; background-color: rgb(228, 252, 255);  border-bottom-right-radius: 8px; border-top-right-radius: 8px">
                           <label
                           for="formDataFirstName"
                           class="col-sm-4 col-form-label text-right"
@@ -141,11 +156,12 @@
                         </label>
                         </div>
                       </div>
-                      <div class="form-group row mb-3">
+                      <div class="form-group row mb-3" >
                         <label
                           for="formDataFirstName"
-                          class="col-sm-4 col-form-label text-right"
+                          class="col-sm-12 col-form-label text-center"
                           id="note"
+                          style="font-weight: bold; font-size: 20px;"
                           >Rozpoznanie:
                         </label>
                       </div>
@@ -154,13 +170,18 @@
                           <textarea class="form-control" id="rozpoznanieLekarza" rows="6"></textarea>
                         </div>
                       </div>
+
+
+                      <div class=" d-flex  align-items-center justify-content-center">
+                      <button type="button" class="buttonSaveData " style="border: 4px solid rgb(52, 68, 152)" id="acceptVisit" onclick="finishVisit()">
+                        Zakończ wizyte
+                      </button>
                     </div>
+                    </div>
+                    
+
                   </div>
-                  <div>
-                    <button type="button" class="buttonSaveData" id="acceptVisit" onclick="finishVisit()">
-                      Zakończ wizyte
-                    </button>
-                  </div>
+                  
                 </div>
               </section>
             </div>
