--- a/uiPatient/myaccountdata.html
+++ b/uiPatient/myaccountdata.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Przychodnia XYZ</title>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&family=Tilt+Neon&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -92,12 +101,11 @@
                           >Płeć:</label
                         >
                         <div class="col-sm-8">
-                          <input
-                            type="text"
-                            class="form-control"
-                            id="genderPatient"
-                            placeholder="płeć"
-                          />
+                            <select class="form-select" id="genderPatient">
+                              <option value="Mężczyzna">Mężczyzna</option>
+                              <option value="Kobieta">Kobieta</option>
+                              <option value="Inna">Inna</option>
+                            </select>
                         </div>
                       </div>
                       <div class="form-group row mb-3">
@@ -147,9 +155,9 @@
                       </div>
                     </div>
                   </div>
-                  <div>
-                    <button type="button" class="buttonSaveData" id="saveDataPatient" onclick="updatePatientData()">
-                      Zapisz zmiany
+                  <div class="d-flex justify-content-center align-items-center">
+                    <button type="button" class="buttonSaveData" style="border: 4px solid #066ab1;"id="saveDataPatient" onclick="updatePatientData()">
+                      Zapisz Dane
                     </button>
                   </div>
                 </div>
